<resources>
    <string name="app_name">Basic Physics and Quiz</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="derivation">Physics derived from Ancient Greek word: φυσική (ἐπιστήμη), translit. physikḗ (epistḗmē),
        lit. \'knowledge of nature\', from φύσις phýsis "nature" is the natural science that studies matter and its
        motion and behavior through space and time and that studies the related entities of energy and force.Physics is
        one of the most fundamental scientific disciplines, and its main goal is to understand how the universe behaves.
    </string>
    <string name="MotionDefinition">> Change in position of a body with respect to a stationary object is known as
        Motion.
        \n
        \n
        > We can easily see a movement of a body if it moves fast but it becomes difficult to see the motion of a body
        if it moves very slow.
    </string>
    <string name="uniform">> When a body travels equal distances in equal intervals of time then the body is said to be
        in Uniform Motion.It does not matter how small the intervals are.\n
        >The graph of uniform motion is a straight line.
        \n
        \n
        > When a body travels unequal distances in equal intervals of time then the body is said to be in Non-uniform
        Motion.\n
        >The graph of non-uniform motion is a curved line
    </string>
    <string name="distance">> Distance travelled by a body is the actual length of the path covered by a moving body.\n
        > Distance is a scalar quantity
    </string>
    <string name="displacement">> The shortest distance between the initial and final position of body,alongwith
        direction is known as Displacement.\n
        >Displacement is a vector quantity
    </string>
    <string name="speed">> The distance travelled by the body in unit time is known as the rate of motion or Speed.\n
        > The SI unit of speed is m/s.\n
        > Speed of an object can be obtained by dividing the Distance travelled by time taken.\n
        > Speed= Distancetravelled/Timetaken\n
        > A body is said to be in uniform speed if it covers equal distances in equal intervals of time.
    </string>
    <string name="velocity">> If a quantity specifies the direction of motion along with its speed.It is known as
        Velocity.\n
        > SI unit of velocity is same as that of speed.\n
        > velocity= Displacement/Timetaken
    </string>
    <string name="accelr">> Acceleration of a body is defined as rate of change of its velocity with time.
        \n
        > The SI unit of acceleration is "meter per second square" or m/s<sup>2</sup> ms<sup>-2</sup>.\n
        > When a body is moving with uniform velocity then its acceleration will be zero. \n
        > Acceleration = Final velocity - Initial velocity/Time taken\n
        > if "u" is initial velocity and "v" is final velocity and "t" is time taken then acceleration "a" is given by\n
        a=v-u/t
    </string>
    <string name="forcedef">> A push or pull in a body is called Force.\n
        > Motion generated in an object is because of an action of a Force.
        \n
        > Force is capable of changing the speed of a moving body.\n
        > Force can stop a moving body.\n
        > Force can change the direction of a moving body.\n
        > We can move a stationary body by applying force.\n
        > We can decrease the speed of an object by applying force in the direction opposite to the direction of
        motion.\n
        > A Force can change the shape of an object.\n
    </string>
    <string name="balance">> If resultant of all the forces acting on a body is zero,the forces are called balanced
        forces.\n
        > If the resultant of all the forces acting on a body is not zero,the forces are called unbalanced forces.
    </string>
    <string name="firstlaw">> In an inertial frame of reference, an object either remains at rest or continues to move
        at a constant velocity, unless acted upon by a force.\n
        > If a ball is lying on the ground it will not move by itself or in other words it cannot change its position of
        rest by itself unless acted by an external force.Thus the position of the ball is changed by an external force
        which supports the first law.\n
        > Inertia is that property of a body due to which it resists the change in its state of rest or motion.\n
        > Greater force will be needed to bring a change in the state of a body whether it is in rest or motion,if
        inertia is greater.\n
        > Mass is measure of inertia of body,it means that heavier objects have more inertia than lighter objects.\n
        > we have observed that when a car stops suddenly the passengers fell forward or when it starts suddenly,the
        passengers fall backward.
    </string>
    <string name="momentum">> The product of mass and velocity of a body is known as momentum.\n
        > <i>p=m×v</i> where p=momentum,m=mass and v=velocity.\n
        > Momentum is a vector quantity.\n
        > SI unit of momentum is kg.m/s or kg.m s<sup>-1</sup>.

    </string>
    <string name="second">> In an inertial frame of reference, the vector sum of the forces F on an object is equal to
        the mass m of that object multiplied by the acceleration a of the object: F = ma. (It is assumed here that the
        mass m is constant).\n
        > This law gives relationship between Force and acceleration.\n
        > F=ma can also be written as a=F/m.
    </string>
    <string name="thirdlaw">> When one body exerts a force on a second body, the second body simultaneously exerts a
        force equal in magnitude and opposite in direction on the first body.\n
        > The gun recoils because when a bullet is fired the force sending the bullet forward is equal to the force
        sending the gun backward.But the gun being heavy moves only a small distance and gives a backward kick to the
        soldier.
    </string>
    <string name="conserve">> This law states that,when two or more bodies act upon one another their total momentum
        remains constant or in other words we can say that momentum is never created or destroyed.
    </string>
    <string name="energy">> The ability to do work is known as energy.\n
        > The energy is consumed,whenever work is done.\n
        > Energy is a scalar quantity.\n
        > The units of work and energy is same.The SI unit of energy is joule.
    </string>
    <string name="kinetic">> The energy of a body due to its motion is called kinetic energy.\n
        > A runner possesses kinetic energy due to its motion.\n
        > Similarly a moving car has kinetic energy due to its motion.\n
        > So, we can say that every object which has speed has kinetic energy.\n
        > Kinetic energy= 1/2mv<sup>2</sup> where m=mass,v=velocity\n
        > We can say that the kinetic energy of a body is directly proportional to its mass as indicated by the
        formula/\n
        > The kinetic energy of a body is directly proportional to the square of velocity or speed of the body.\n
        > on approaching a hilly road,the driver increases the speed of the car to give it kinetic energy so that it can
        overcome the force of gravity.
    </string>
    <string name="potential">> The potential energy of a body is defined as energy possessed by it due to its position
        or change in shape.\n
        > A body may possess potential energy even when not in motion.\n
        > Potential energy=m × g × h where m=mass,g=acceleration due to gravity,h=height of the body.\n
        > The sum of potential energy and kinetic energy is called mechanical energy.
    </string>
    <string name="power">> The rate of doing work is known as power.\n
        > The work done per unit time is known as power.\n
        > In other words,power is the rate at which energy is consumed.\n
        > Power is a scalar quantity.\n
        > p=w/t where p=power,w=work,t=time
        > The SI unit of power is watt.
    </string>
    <string name="reflect">> When a ray of light strikes a surface then the ray of light bounces back in the same
        medium.This phenomenon is known as reflection of light.\n
        > Reflection is of two types:\n
        > <b>Diffused reflection</b> is reflection from rough surface.\n
        > <b>Regular Reflection</b> is reflection from smooth surface.\n
    </string>
    <string name="lawsofreflect">> The angle of incidence(i) is equal to angle of reflection.\n
        > The incident ray,the reflected ray and the normal at the point of incidence all lie in same plane.\n
        > Image formed by a plane mirror is always virtual and erect.
    </string>
    <string name="refraction">> When a ray of light travelling in one medium enters into another medium their occurs
        bending of light at the surface of separation of two media.This is known as Refraction.\n
        > <b>Optically denser</b>  medium is that medium in which the speed of light is less.\n
        > <b>Optically rarer</b> medium is that medium in which the speed of light is more.
    </string>
    <string name="lawsofrefract">> The incident ray,the refracted ray and the normal to the interface of separation at
        the point of incidence all lie in same plane.\n
        > The ratio of sine of angle of incidence to the ratio of sine of refraction is a constant.This law is also
        known as Snell\'s law.
    </string>
    <string name="magnetic">> The Electromagnetic effect was first discovered by Oersted.\n

    </string>
    <string name="natural">> <b>Natural magnets</b> are the one,which occur naturally e.g.,lodestone.\n
        > <b>Artificial magnets</b> are prepared artificially by magnetising small pieces of iron.\n
    </string>
    <string name="lines">> Michael Faraday was the one that put forward the concept of Magnetic field lines.\n
        > Faraday told us that the magnet modifies the space around itself in such a fashion that if any other magnetic
        substance moves into this space it experiences a force.The region is termed as magnetic field of the magnet.\n
        > Magnetic field line can be best described as the pictorial representation of magnetic field.\n
        > The magnetic field lines travel from north to south pole of magnet outside the magnet and from south to north
        pole inside the magnet.\n
        > They are continuous closed curves. \n
        > They do not intersect each other.\n

    </string>
    <string name="source">> Energy is ability to do work.It can exist in many forms.Some of them are:\n
        > Heat energy\n
        > chemical energy\n
        > Electrical energy\n
        > Nuclear energy\n
    </string>
    <string name="renewable">> <b>Renewable</b> sources are those sources which are inexhaustible.e.g. solar energy.\n
        <b>Non-renewable</b>
        sources are exhaustible and should be used wisely.e.g. coal.
    </string>
    <string name="coal">> Coal is a mixture of carbon,hydrogen,oxygen, nitrogen and sulphur.\n
        > It was formed by decomposition of plants that got buried under the surface of earth millions of years ago.\n
        > Carbonisation is a process of conversion of wood into coal at high temperature and pressure.
    </string>
    <string name="solare">Solar energy is produced by solar rays.\n
        > The solar energy recieved by the earth is in scattered form or diffused form.\n
    </string>
    <string name="geothermal">It is heat energy present inside the earth.\n
        > Geothermal plants use the heat energy of the magma.\n
        > It is renewable source of energy and is free of cost.\n
    </string>
</resources>