<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SourcesOfEnergy">
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="Sources of energy"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:textColor="#000"
                  android:textSize="25sp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Introduction:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/source"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Renewable and Non-renewable sources:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/renewable"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Coal:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/coal"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:src="@drawable/coal"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Solar Energy:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/solare"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:src="@drawable/lighte"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Geothermal Energy:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/geothermal"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:src="@drawable/geo"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/sourad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="ca-app-pub-9175625503877306/3657409338">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>