<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LawsMotion">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/scrollView5"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">


            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="Newtons Laws of Motion"
                      android:textAlignment="center"
                      android:textColor="#000"
                      android:textSize="20sp"
            />
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="Newton's First Law of Motion:"
                      android:textAppearance="@style/heading"
                      android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/firstlaw"
            android:textAppearance="@style/body"
            android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="Momentum:"
            android:textAppearance="@style/heading"
            android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textAppearance="@style/body"
            android:layout_margin="5dp"
            android:text="@string/momentum"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="Newton's Second Law of Motion"
            android:textAppearance="@style/heading"
            android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/second"
            android:textAppearance="@style/body"
            android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="Newton's Third Law of Motion"
            android:textAppearance="@style/heading"
            android:layout_margin="5dp"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/thirdlaw"
            android:textAppearance="@style/body"
            android:layout_margin="5dp"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <com.google.android.gms.ads.AdView
                        xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/lawad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        ads:adSize="SMART_BANNER"
                        ads:adUnitId="ca-app-pub-9175625503877306/2738422790">
                </com.google.android.gms.ads.AdView>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>