<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MagneticeffectsofCu">
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="Magnetic effects of current"
                  android:textAlignment="center"
                  android:gravity="center"
                  android:textColor="#000"
                  android:textSize="25sp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Introduction:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/magnetic"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Natural and Artificial Magnets:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/natural"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="@style/heading"
                  android:text="Magnetic field lines:"
                  android:layout_margin="5dp"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/lines"
                  android:textAppearance="@style/body"
                  android:layout_margin="5dp"/>
        <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:src="@drawable/magnet"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/magfef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="ca-app-pub-9175625503877306/7938778581">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>